codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__session__airs_tests__airs_header_narrow.snap
---
source: tui/src/history_cell/airs_session_tests.rs
assertion_line: 27
expression: render(42)
---
╭────────────────────────────────────────╮
│ >_ Prisma AIRS Harness (v0.0.0)        │
│                                        │
│ model:       AI Gateway — default   /… │
│ directory:   /workspace/project        │
│ environment: work                      │
│ gateway:     https://airs.example/v1   │
│ identity:    workspace credential      │
│ permissions: workspace-write           │
╰────────────────────────────────────────╯
