codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__session__airs_tests__airs_header_transcript.snap
---
source: tui/src/history_cell/airs_session_tests.rs
assertion_line: 34
expression: raw
---
Prisma AIRS Terminal (v0.0.0)
model: AI Gateway — default
directory: /workspace/project
environment: work
gateway: https://airs.example/v1
identity: workspace credential
permissions: workspace-write
