codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__session__airs_tests__airs_header_wide.snap
---
source: tui/src/history_cell/airs_session_tests.rs
assertion_line: 26
expression: render(80)
---
╭──────────────────────────────────────────────────────╮
│ >_ Prisma AIRS Terminal (v0.0.0)                     │
│                                                      │
│ model:       AI Gateway — default   /model to change │
│ directory:   /workspace/project                      │
│ environment: work                                    │
│ gateway:     https://airs.example/v1                 │
│ identity:    workspace credential                    │
│ permissions: workspace-write                         │
╰──────────────────────────────────────────────────────╯
