codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__session__airs_tests__airs_oidc_header.snap
---
source: tui/src/history_cell/airs_session_tests.rs
expression: "cell.display_lines(80).iter().map(ToString::to_string).collect::<Vec<_>>().join(\"\\n\")"
---
╭──────────────────────────────────────────────────────╮
│ >_ Prisma AIRS Harness (v0.0.0)                      │
│                                                      │
│ model:       AI Gateway — default   /model to change │
│ directory:   /workspace/project                      │
│ environment: work-sso                                │
│ gateway:     https://airs.example/v1                 │
│ identity:    OIDC · teammate                         │
│ permissions: workspace-write                         │
╰──────────────────────────────────────────────────────╯
